# raffine

./: .clang-format  CMakeLists.txt  affine_transformation.c  affine_transformation.h  raffine.c
test/: test.c
